--- a/templates/base.html
+++ b/templates/base.html
@@ -2,47 +2,93 @@
 <html lang="en">
 <head>
     <title>{{ title }}</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="static/css/styles.css" media="screen"/>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="navbar-nav">
+                    <div class="nav-item">
+                        <a class="nav-link" href="#">Помощь</a>
+                    </div>
+                    <div class="nav-item">
+                        <a class="nav-link" href="#">Каталоги</a>
+                    </div>
+                </div>
+                <div class="navbar-nav ml-auto" style="margin-left: auto">
+                    <div class="nav-item">
+                        <a class="nav-link" href="/login">Вход и регистрация</a>
+                    </div>
+                    <div class="nav-item">
+                        <a class="nav-link" href="#">Разместить объявление</a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
-    {% block content %}
-    {% endblock %}
+</header>
+<div class="search-container">
+    <div class="logo-container" style="">
+        <a class="navbar-brand" href="/">
+            <img src="static/img/logo.jpg" alt="Avito Clone Logo" width="150" height="30">
+        </a>
+    </div>
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"
+                style="
+    background-color: #00aaff;
+">
+            Все категории
+        </button>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Электроника</a>
+                    <a class="dropdown-item" href="#">Кухня</a>
+                    <a class="dropdown-item" href="#">Сад и дача</a>
+                    <a class="dropdown-item" href="#">Авто</a>
+                    <a class="dropdown-item" href="#">Недвижимость</a>
+                    <a class="dropdown-item" href="#">Услуги</a>
+                    <a class="dropdown-item" href="#">Женщинам</a>
+                    <a class="dropdown-item" href="#">Мужчинам</a>
+                    <a class="dropdown-item" href="#">Детям</a>
+                    <a class="dropdown-item" href="#">Работа и карьера</a>
+                    <a class="dropdown-item" href="#">Товары для бизнеса</a>
+                    <a class="dropdown-item" href="#">Службы</a>
+                    <a class="dropdown-item" href="#">Отдых и путешествия</a>
+                    <a class="dropdown-item" href="#">Красота и здоровье</a>
+                    <a class="dropdown-item" href="#">Хобби и отдых</a>
+                    <a class="dropdown-item" href="#">Книги</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="search-bar-container" style="">
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Поиск..." aria-label="Recipient's username"
+                   aria-describedby="button-addon2">
+            <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button" id="button-addon2" style="
+    background-color: #00aaff;
+    color: white;
+">Поиск
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+{% block content %}
+{% endblock %}
 </body>
 </html>
