--- a/templates/index.html
+++ b/templates/index.html
@@ -4,35 +4,39 @@
 
 <html>
 <head>
-    <title>Categories</title>
+    <title class="title">Categories</title>
 </head>
 <body>
-    <h2>Categories</h2>
-    <div class="category">
-        <h4>Autos</h4>
-        <img src="static/img/auto.jpg" alt="Auto image">
-    </div>
-    <div class="category">
-        <h4>Real Estate</h4>
-        <img src="static/img/house.jpg" alt="House image">
-    </div>
-    <div class="category">
-        <h4>Cloth</h4>
-        <img src="static/img/cloth.jpg" alt="Cloth image">
-    </div>
-    <div class="category">
-        <h4>Animal</h4>
-        <img src="static/img/cat.jpg" alt="Animal image">
-    </div>
-    <div class="category">
-        <h4>electronics</h4>
-        <img src="static/img/electronics.jpg" alt="Electronics image">
-    </div>
-    <div class="category">
-        <h4>For home</h4>
-        <img src="static/img/for_home.jpg" alt="For_home image">
-    </div>
+    <div class="main-category">
+        <h2>Categories</h2>
+        <div class="category">
+            <h4>Autos</h4>
+            <img src="static/img/auto.jpg" alt="Auto image">
+        </div>
+        <div class="category">
+            <h4>Real Estate</h4>
+            <img src="static/img/house.jpg" alt="House image">
+        </div>
+        <div class="category">
+            <h4>Cloth</h4>
+            <img src="static/img/cloth.jpg" alt="Cloth image">
+        </div>
 
+    </div>
+    <div class="main-category">
+        <div class="category">
+            <h4>Animal</h4>
+            <img src="static/img/cat.jpg" alt="Animal image">
+        </div>
+        <div class="category">
+            <h4>electronics</h4>
+            <img src="static/img/electronics.jpg" alt="Electronics image">
+        </div>
+        <div class="category">
+            <h4>For home</h4>
+            <img src="static/img/for_home.jpg" alt="For_home image">
+        </div>
+    </div>
     <!-- Add more categories as needed -->
 </body>
 </html>
