--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,4 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
+<html>
+<head>
 
+</head>
+<body>
+    <button class="astext button-container">Настройки</button>
+    <button class="astext button-container">Избранные</button>
+    <button class="astext button-container">Резюме</button>
+    <div>
+        <center>
+            <button class="button-blue">разместить объявление</button>
+        </center>
+
+    </div>
+
+</body>
+</html>
 {% endblock %}
