--- a/templates/index.html
+++ b/templates/index.html
@@ -7,37 +7,34 @@
     <title class="title">Categories</title>
 </head>
 <body>
-    <div class="main-category">
-        <h2>Categories</h2>
-        <div class="category">
-            <h4>Autos</h4>
-            <img src="static/img/auto.jpg" alt="Auto image">
-        </div>
-        <div class="category">
-            <h4>Real Estate</h4>
-            <img src="static/img/house.jpg" alt="House image">
-        </div>
-        <div class="category">
-            <h4>Cloth</h4>
-            <img src="static/img/cloth.jpg" alt="Cloth image">
-        </div>
+<div class="card-group">
+  <a href="#" class="nav-link"><div class="card">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+    </div>
 
+  </div>
+  </a>
+  <div class="card">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
     </div>
-    <div class="main-category">
-        <div class="category">
-            <h4>Animal</h4>
-            <img src="static/img/cat.jpg" alt="Animal image">
-        </div>
-        <div class="category">
-            <h4>electronics</h4>
-            <img src="static/img/electronics.jpg" alt="Electronics image">
-        </div>
-        <div class="category">
-            <h4>For home</h4>
-            <img src="static/img/for_home.jpg" alt="For_home image">
-        </div>
+  </div>
+  <div class="card">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
     </div>
-    <!-- Add more categories as needed -->
+  </div>
+</div>
 </body>
 </html>
 {% endblock %}
