--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
                     </div>
                     {% endif %}
                     <div class="nav-item">
-                        <a class="nav-link" href="#">Разместить объявление</a>
+                        <a class="nav-link" href="/additem">Разместить объявление</a>
                     </div>
                 </div>
             </div>
