--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,7 +10,7 @@
     <button class="astext button-container">Резюме</button>
     <div>
         <center>
-            <button class="button-blue">разместить объявление</button>
+            <a href="/additem"><button class="button-blue">разместить объявление</button></a>
         </center>
 
     </div>
