--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,18 @@
     </div>
   </div>
 </div>
+<!-- Я без понятия что сверху происходит, дальше лучше будет надеюсь -->
+<h2 style="margin-left: 15%">Объявления</h2>
+    <div style="display: flex; justify-content: space-beetween; margin-left: 15%; margin-right: 15%">
+        {% for offer in data %}
+            <div class="category">
+                <a href="#" class="nav-link">
+                    <img src="static/img/{{ offer[-1] }}">
+                    <h1>{{ offer[1] }}</h1>
+                </a>
+            </div>
+        {% endfor %}
+    </div>
 </body>
 </html>
 {% endblock %}
