--- a/templates/index.html
+++ b/templates/index.html
@@ -4,52 +4,71 @@
 <div class="container">
     <div class="row">
         <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карточки.</p>
+            <button type="button">
+  <img src="/static/img/auto.jpg" class="card-img-top" alt="...">
+
+            <div class="card-body">
+    <p class="card-text">АВТОТРАНСПОРТ</p>
+
   </div>
+            </button>
+</div>
+
+        <div class="card" style="width: 18rem;">
+            <button type="button">
+  <img src="/static/img/cat.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">ПИТОМЦЫ</p>
+  </div>
+            </button>
 </div>
         <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+            <button type="button">
+  <img src="/static/img/cloth.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карточки.</p>
+    <p class="card-text">ОДЕЖДА</p>
   </div>
+            </button>
 </div>
         <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+            <button type="button">
+  <img src="/static/img/electronics.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карточки.</p>
+    <p class="card-text">ЭЛЕКТРОНИКА</p>
   </div>
+            </button>
 </div>
         <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+            <button type="button">
+  <img src="/static/img/for_home.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карточки.</p>
+    <p class="card-text">ДЛЯ ДОМА</p>
   </div>
+            </button>
 </div>
         <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+            <button type="button">
+  <img src="/static/img/house.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карточки.</p>
+    <p class="card-text">НЕДВИЖИМОСТЬ</p>
   </div>
+            </button>
 </div>
         <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+            <button type="button">
+  <img src="/static/img/job.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карточки.</p>
+    <p class="card-text">РАБОТА</p>
   </div>
+            </button>
 </div>
         <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+            <button type="button">
+  <img src="/static/img/beaty.jpeg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карточки.</p>
+    <p class="card-text">КРАСОТА</p>
   </div>
-</div>
-        <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карточки.</p>
-  </div>
+            </button>
 </div>
     </div>
 </div>
