--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <title>{{ title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="static/css/styles.css" media="screen"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/styles.css" media="screen"/>
 </head>
 <body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -20,14 +20,11 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav">
                     <div class="nav-item">
-                        <a class="nav-link" href="#">Помощь</a>
-                    </div>
-                    <div class="nav-item">
-                        <a class="nav-link" href="#">Каталоги</a>
+                        <a class="nav-link" href="/help">Помощь</a>
                     </div>
                 </div>
                 <div class="navbar-nav ml-auto" style="margin-left: auto">
-                    {% if not current_user %}
+                    {% if not current_user.is_authenticated %}
                     <div class="nav-item">
                         <a class="nav-link" href="/login">Вход и регистрация</a>
                     </div>
@@ -47,7 +44,7 @@
 <div class="search-container">
     <div class="logo-container" style="">
         <a class="navbar-brand" href="/">
-            <img src="static/img/logo.jpg" alt="Avito Clone Logo" width="150" height="30">
+            <img src="/static/img/logo.jpg" alt="Avito Clone Logo" width="150" height="30">
         </a>
     </div>
     <div class="dropdown">
@@ -60,22 +57,15 @@
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Электроника</a>
-                    <a class="dropdown-item" href="#">Кухня</a>
-                    <a class="dropdown-item" href="#">Сад и дача</a>
-                    <a class="dropdown-item" href="#">Авто</a>
-                    <a class="dropdown-item" href="#">Недвижимость</a>
-                    <a class="dropdown-item" href="#">Услуги</a>
-                    <a class="dropdown-item" href="#">Женщинам</a>
-                    <a class="dropdown-item" href="#">Мужчинам</a>
-                    <a class="dropdown-item" href="#">Детям</a>
-                    <a class="dropdown-item" href="#">Работа и карьера</a>
-                    <a class="dropdown-item" href="#">Товары для бизнеса</a>
-                    <a class="dropdown-item" href="#">Службы</a>
-                    <a class="dropdown-item" href="#">Отдых и путешествия</a>
-                    <a class="dropdown-item" href="#">Красота и здоровье</a>
-                    <a class="dropdown-item" href="#">Хобби и отдых</a>
-                    <a class="dropdown-item" href="#">Книги</a>
+                    <a class="dropdown-item" href="/category/Автотранспорт">Автотранспорт</a>
+                    <a class="dropdown-item" href="/category/Питомцы">Питомцы</a>
+                    <a class="dropdown-item" href="/category/Одежда">Одежда</a>
+                    <a class="dropdown-item" href="/category/Электроника">Электроника</a>
+                    <a class="dropdown-item" href="/category/Для дома">Для дома</a>
+                    <a class="dropdown-item" href="/category/Недвижимость">Недвижимость</a>
+                    <a class="dropdown-item" href="/category/Работа">Работа</a>
+                    <a class="dropdown-item" href="/category/Красота">Красота</a>
+                    <a class="dropdown-item" href="/category/Книги">Книги</a>
                 </div>
             </li>
         </ul>
