--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav">
                     <div class="nav-item">
-                        <a class="nav-link" href="/help">Помощь</a>
+                        <a class="nav-link" href="https://openai.com/chatgpt">Помощь</a>
                     </div>
                 </div>
                 <div class="navbar-nav ml-auto" style="margin-left: auto">
